--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundcellor": "#fff",
+    "navigationBarBackgroundColor": "#ffffff",
     "navigationBarTitleText": "计算器",
     "navigationBarTextStyle": "black"
   },
